# CDP-Patches

./: .gitignore  README.md  main.py  requirements-test.txt  requirements.txt  scratch.py  scratch_driverless.py  scratch_uia.py  scratch_win32.py  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
cdp_patches/: __init__.py
cdp_patches/input/: __init__.py  async_input.py  browsers.py  exceptions.py  mouse_trajectory.py  sync_input.py  utils.py
cdp_patches/input/os_base/: linux.py  windows.py
dev/: README.md  debug_conversion.py  test_leak.js
docs/: CONTRIBUTING.md  HISTORY.md  index.rst
docs/gitbook/: README.md  SUMMARY.md
docs/gitbook/input/: README.md  async-usage.md  playwright-usage.md  selenium-usage.md  sync-usage.md
pyinput/: asyncio.py  base.py  sync.py  utils.py
pyinput/base/: linux.py
pyinput/os_base/: __init__.py  windows.py
tests/: __init__.py  async_selenium_test_debug.py  conftest.py  server.py  test_async_driverless.py  test_async_playwright.py  test_async_selenium.py  test_other.py  test_selenium.py  test_sync_driverless.py  test_sync_playwright.py  test_sync_selenium.py  utils.py
tests/assets/input/: mouse-helper.js
