[metadata]
name = cdp_patches
version = attr: cdp_patches.VERSION
description = Patching CDP (Chrome DevTools Protocol) leaks on OS level. Easy to use with Playwright, Selenium, and other web automation tools.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vinyzu, Kaliiiiiiiiii
url = https://github.com/Kaliiiiiiiiii-Vinyzu/CDP-Patches/
license = GNU General Public License v3.0
license_file = LICENSE
keywords = botright, playwright, browser, automation, fingerprints, fingerprinting, dataset, data, selenium, chrome, patching, web-automation
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Browsers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = no
python_requires = >=3.8
packages = find:
install_requires =
    numpy
    websockets
    requests
    pywinauto; platform_system=='Windows'
    python-xlib; platform_system=='Linux'


[options.package_data]
* = requirements.txt

[options.packages.find]
include = cdp_patches, cdp_patches.*, LICENSE
exclude = tests, .github

[options.extras_require]
automation_linting =
    playwright
    botright
    selenium
    selenium_driverless
    webdriver-manager
testing =
    pytest
    mypy
    flake8
    tox
    playwright
    botright
    selenium
    selenium_driverless
    webdriver-manager
